--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@remix-run/vercel": "^1.1.3",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "react": "^17.0.2",
