--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "",
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
-    "postinstall": "remix setup node"
+    "dev": "node -r dotenv/config node_modules/.bin/remix dev",
+    "postinstall": "remix setup node",
+    "start": "remix-serve build"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
@@ -23,6 +24,7 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "dotenv": "^16.0.0",
     "typescript": "^4.1.2"
   },
   "engines": {
