--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3"
